--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^9.3.3",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.0",
+    "eslint-config-standard": "^14.1.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0",
@@ -37,6 +38,7 @@
     ]
   },
   "devDependencies": {
-    "flow-bin": "^0.113.0"
+    "flow-bin": "^0.113.0",
+    "standard": "^14.3.1"
   }
 }
